# quickword

./: .gitignore  README.md  com.github.hezral.quickword  com.github.hezral.quickword.yml  com.github.hezral.quickword_1.0.0_amd64.deb  files.txt  meson.build  myoutputfile.txt  setup.py  test.py
.github/workflows/: main.yml
data/: application.css  com.github.hezral.quickword.appdata.xml  com.github.hezral.quickword.appdata.xml.in  com.github.hezral.quickword.desktop  com.github.hezral.quickword.desktop.in  com.github.hezral.quickword.gschema.xml  meson.build
data/icons/: prep_icons.py
debian/: changelog  control  copyright  rules
po/: POTFILES  meson.build
prefix/share/: quickword-1.0.0-py3.6.egg-info
quickword/: application.py  clipboard.py  clipboard_manager.py  concurrentthest.py  custom_shortcut_settings.py  data_manager.py  events.py  language_detect.py  lookup.py  main copy.py  main.py  main_window.py  noword_view.py  settings_view.py  test.py  thread.py  threadcallbacks.py  updater copy.py  updater.py  updater_view.py  word_lookup.py  word_view.py
src/: active_window_manager.py  application.py  clipboard_manager.py  custom_shortcut_settings.py  data_manager.py  main.py  main_window.py  meson.build  noword_view.py  quickword.in  settings_view.py  updater_view.py  utils.py  word_lookup.py  word_view.py
